# OpenAirLink

./: CITATION.cff  README.md
TUM_Ray_tracing/: CreateCSVforAirLink.m  TUM_map.osm  bounded_random_walk.m  make_random_walk.m
fpga-openairlink/: usrp_x310_fpga_HG.rpt
rfnoc-airlink/: CMakeLists.txt
rfnoc-airlink/apps/: airlink_single.cpp
rfnoc-airlink/channel_control/: emu_dual_manually.csv
rfnoc-airlink/fpga/: CMakeLists.txt
rfnoc-airlink/fpga/rfnoc_block_shiftright/: CMakeLists.txt  noc_shell_shiftright.v  rfnoc_block_shiftright.v
rfnoc-airlink/icores/: CMakeLists.txt
rfnoc-airlink/include/rfnoc/airlink/: CMakeLists.txt  shiftright_block_control.hpp
rfnoc-airlink/lib/: CMakeLists.txt  shiftright_block_control.cpp
rfnoc-openairlink/: .gitignore  CMakeLists.txt
rfnoc-openairlink/apps/: CMakeLists.txt  airlink_dual.cpp  airlink_single.cpp  init_shiftright_block.cpp  oal_dual.cpp  oal_single.cpp
rfnoc-openairlink/blocks/: CMakeLists.txt  shiftright.yml
rfnoc-openairlink/channel_control/: chan_dual_script.csv  chan_singel_script.csv  emu_singel_manually.csv  emu_singel_script.csv
rfnoc-openairlink/fpga/: CMakeLists.txt  Makefile.srcs
rfnoc-openairlink/fpga/rfnoc_block_shiftright/: CMakeLists.txt  Makefile  Makefile.srcs  rfnoc_block_shiftright_tb.sv
rfnoc-openairlink/icores/: CMakeLists.txt  x310_rfnoc_image_core.yml
rfnoc-openairlink/include/rfnoc/airlink/: CMakeLists.txt  shiftright_block_control.hpp
rfnoc-openairlink/include/rfnoc/openairlink/: shiftright_block_control.hpp
rfnoc-openairlink/lib/: CMakeLists.txt  shiftright_block_control.cpp
